Chapter Shongo done

--- a/bibliography/example.bib
+++ b/bibliography/example.bib
@@ -150,6 +150,14 @@
   langid      = {czech}
 }
 
+@MASTERSTHESIS{perichta2020,
+  title       = {Redesign a reimplementácia rezervačného systému Shongo},
+  author      = {Perichta, Bc. Marek},
+  date        = {2020},
+  institution = {Masaryk University},
+  langid      = {slovak}
+}
+
 @ONLINE{shongo,
   publisher = {CESNET, z. s. p. o.},
   title     = {Shongo},
