--- a/thesis.tex
+++ b/thesis.tex
@@ -109,8 +109,9 @@
     
     \begin{figure}[!ht]
       \centering
+      \includegraphics[width=\imgwidth]{#1}
       \caption{#2}
-      \includegraphics[width=\imgwidth]{#1}%
+      \cite{perichta2020}
       \label{fig:#3}
     \end{figure}
 }
