--- a/bibliography/example.bib
+++ b/bibliography/example.bib
@@ -67,22 +67,6 @@
   langid       = {english},
 }
 
-% HÀN, Thé Thành, 2001. Micro-typographic extensions to the TEX type- setting
-% system [online]. Brno [visited on 2016-12-09]. Available from:
-% http://www.pragma-ade.nl/pdftex/thesis.pdf. PhD thesis. The Faculty of
-% Informatics, Masaryk University.
-
-@PHDTHESIS{thanh01,
-  author      = {Hàn Thé, Thành},
-  title       = {Micro-typographic extensions to the \TeX{} typesetting system},
-  date        = {2001},
-  institution = {The Faculty of Informatics, Masaryk University},
-  location    = {Brno},
-  url         = {http://www.pragma-ade.nl/pdftex/thesis.pdf},
-  urldate     = {2016-12-09},
-  langid      = {english}
-}
-
 % SHANNON, Claude Elwood, 1940. A symbolic analysis of relay and switching
 % circuits. Available from DOI: 1721.1/11173. Master’s thesis.  Massachusetts
 % Institute of Technology.
@@ -200,5 +184,32 @@
   url       = {https://www.eduid.cz/},
   date      = {2017},
   urldate   = {2022-03-09},
+  langid    = {english}
+}
+
+@PHDTHESIS{fielding2000rest,
+  author      = {Fielding, Roy Thomas},
+  title       = {Architectural Styles and the Design of Network-based Software Architectures},
+  date        = {2000},
+  institution = {University of California, Irvine},
+  location    = {Irvine},
+  url         = {https://www.ics.uci.edu/~fielding/pubs/dissertation/top.htm},
+  urldate     = {2022-03-09},
+  langid      = {english}
+}
+
+@ARTICLE{ibmrest,
+  title     = {REST APIs},
+  url       = {https://www.ibm.com/cloud/learn/rest-apis/},
+  date      = {2021},
+  urldate   = {2022-03-09},
+  langid    = {english}
+}
+
+@ONLINE{springdoc,
+  publisher = {VMware. Inc.},
+  title     = {Spring Framework 5.3.19 API},
+  date      = {2022},
+  url       = {https://docs.spring.io/spring-framework/docs/current/javadoc-api/},
   langid    = {english}
 }
