Chapter implementation done.

--- a/bibliography/example.bib
+++ b/bibliography/example.bib
@@ -206,10 +206,26 @@
   langid    = {english}
 }
 
-@ONLINE{springdoc,
+@ONLINE{springdocumentation,
   publisher = {VMware. Inc.},
   title     = {Spring Framework 5.3.19 API},
   date      = {2022},
   url       = {https://docs.spring.io/spring-framework/docs/current/javadoc-api/},
+  langid    = {english}
+}
+
+@ONLINE{springdoc,
+  author    = {Nasslahsen, Badr},
+  title     = {Springdoc-openapi documentation},
+  date      = {2021},
+  url       = {https://springdoc.org/},
+  langid    = {english}
+}
+
+@ONLINE{swagger,
+  publisher = {SmartBear Software},
+  title     = {Swagger},
+  date      = {2021},
+  url       = {https://swagger.io/tools/swagger-ui/},
   langid    = {english}
 }
