--- a/bibliography/example.bib
+++ b/bibliography/example.bib
@@ -229,3 +229,11 @@
   url       = {https://swagger.io/tools/swagger-ui/},
   langid    = {english}
 }
+
+@ONLINE{lombok,
+  publisher = {Project Lombok},
+  title     = {Project Lombok},
+  date      = {2022},
+  url       = {https://projectlombok.org/},
+  langid    = {english}
+}
