--- a/appendices/an-appendix.tex
+++ b/appendices/an-appendix.tex
@@ -1,2 +1,6 @@
-\chapter{An appendix}
-Here you can insert the appendices of your thesis.
+\chapter{Code}
+Resulting code is attached.
+
+\chapter{OpenAPI specification}
+Final REST \hyperref[sec:openapi]{OpenAPI specification} copy is available in \texttt{openapi.json} file.
+Also, pre-configured \hyperref[sec:swagger]{Swagger UI} is attached, for pleasant viewing of the Specification.
