Updates from Overleaf

--- a/appendices/an-appendix.tex
+++ b/appendices/an-appendix.tex
@@ -1,6 +1,6 @@
 \chapter{Code}
 Resulting code is attached.
 
-\chapter{OpenAPI specification}
+\chapter{OpenAPI Specification} \label{ape:documentation}
 Final REST \hyperref[sec:openapi]{OpenAPI specification} copy is available in \texttt{openapi.json} file.
 Also, pre-configured \hyperref[sec:swagger]{Swagger UI} is attached, for pleasant viewing of the Specification.
