Final draft done.

--- a/appendices/an-appendix.tex
+++ b/appendices/an-appendix.tex
@@ -1,6 +1,6 @@
 \chapter{Code}
-Resulting code is attached.
+The source code of the Shongo system with implemented REST API is attached.
 
 \chapter{OpenAPI Specification} \label{ape:documentation}
-Final REST \hyperref[sec:openapi]{OpenAPI specification} copy is available in \texttt{openapi.json} file.
-Also, pre-configured \hyperref[sec:swagger]{Swagger UI} is attached, for pleasant viewing of the Specification.
+Final REST OpenAPI specification (see \Cref{sec:openapi}) copy is available in the \texttt{openapi.json} file.
+Also, pre-configured Swagger UI (see \Cref{sec:swagger}) is attached, for pleasant viewing of the specification.
