--- a/thesis.tex
+++ b/thesis.tex
@@ -22,7 +22,7 @@
            %% use at least 120 g/m² paper to prevent show-through.
   lof,     %% The `lof` option prints the List of Figures. Replace
            %% with `nolof` to hide the List of Figures.
-  lot,     %% The `lot` option prints the List of Tables. Replace
+  nolot,     %% The `lot` option prints the List of Tables. Replace
            %% with `nolot` to hide the List of Tables.
 ]{fithesis4}
 %% The following section sets up the locales used in the thesis.
@@ -58,14 +58,13 @@
     keywords    = {Shongo, REST, API},
     TeXkeywords = {Shongo, REST, API},
     abstract    = {%
-      This is the abstract of my thesis, which can
-
-      span multiple paragraphs.
+      The main goal of this bachelor's thesis is to design and implement REST API for the reservation system Shongo developed and operated by the CESNET association. The API will expose the Shongo back-end (Controller module) to higher layers. As a result, a new front-end, which is a goal of another thesis, can communicate with Shongo, thus fully separating the front-end and back-end of the Shongo system.
+      
+      This paper first introduces the Shongo system and discusses the necessary change in its architecture. After the comment about the technologies used, the proposed implementation is presented. Finally, the resulting API is described.
     },
     thanks      = {%
-      These are the acknowledgements for my thesis, which can
-
-      span multiple paragraphs.
+    I would like to thank my advisor RNDr. Miloš Liška, Ph.D, for leadership and valuable comments during the creation of my work.
+    I would also like to thank my family and friends for their support and the possibility to write this thesis peacefully.
     },
     bib         = bibliography/example.bib,
     %% Remove the following line to use the JVS 2018 faculty logo.
