--- a/appendices/an-appendix.tex
+++ b/appendices/an-appendix.tex
@@ -1,6 +1,7 @@
-\chapter{Code}
-The source code of the Shongo system with implemented REST API is attached.
-
-\chapter{OpenAPI Specification} \label{ape:documentation}
-Final REST OpenAPI specification (see \Cref{sec:openapi}) copy is available in the \texttt{openapi.json} file.
-Also, pre-configured Swagger UI (see \Cref{sec:swagger}) is attached, for pleasant viewing of the specification.
+\chapter{Attached Files} \label{apx:files}
+This work consists of the electronic version of the thesis and a zip archive \texttt{shongo.zip}, both publicly accessible in the Information System of Masaryk University\footnote{\url{https://is.muni.cz/th/jhvt4/}}.
+The archive consists of 2 parts:
+\begin{itemize}
+    \item The source code of the Shongo system with implemented REST API is available the in \texttt{shongo} directory.
+    \item Final generated OpenAPI specification (see \Cref{sec:openapi}) for implemented REST API is available in the \texttt{openapi.json} file. Also, pre-configured Swagger UI (see \Cref{sec:swagger}) is attached, for pleasant viewing of the specification.
+\end{itemize}
