--- a/thesis.tex
+++ b/thesis.tex
@@ -60,11 +60,11 @@
     abstract    = {%
       The main goal of this bachelor's thesis is to design and implement REST API for the reservation system Shongo developed and operated by the CESNET association. The API will expose the Shongo back-end (Controller module) to higher layers. As a result, a new front-end, which is a goal of another thesis, can communicate with Shongo, thus fully separating the front-end and back-end of the Shongo system.
       
-      This paper first introduces the Shongo system and discusses the necessary change in its architecture. After the comment about the technologies used, the proposed implementation is presented. Finally, the resulting API is described.
+      This paper first introduces the Shongo system and discusses the necessary change in its architecture. After the comment about the technologies used, the proposed implementation is presented and the resulting API is described.
     },
     thanks      = {%
     I would like to thank my advisor RNDr. Miloš Liška, Ph.D, for leadership and valuable comments during the creation of my work.
-    I would also like to thank my family and friends for their support and the possibility to write this thesis peacefully.
+    I would also like to thank my family and friends for their support and the possibility to write this thesis without interruption.
     },
     bib         = bibliography/example.bib,
     %% Remove the following line to use the JVS 2018 faculty logo.
