Abstract and conclusion finished

--- a/appendices/an-appendix.tex
+++ b/appendices/an-appendix.tex
@@ -3,5 +3,5 @@ This work consists of the electronic version of the thesis and a zip archive \te
 The archive consists of 2 parts:
 \begin{itemize}
     \item The source code of the Shongo system with implemented REST API is available the in \texttt{shongo} directory.
-    \item Final generated OpenAPI specification (see \Cref{sec:openapi}) for implemented REST API is available in the \texttt{openapi.json} file. Also, pre-configured Swagger UI (see \Cref{sec:swagger}) is attached, for pleasant viewing of the specification.
+    \item Generated OpenAPI specification (see \Cref{sec:openapi}) for implemented REST API is available in the \texttt{openapi.json} file. The specification can be tested in Swagger UI (available at \url{https://editor.swagger.io/} for example).
 \end{itemize}
