--- a/thesis.tex
+++ b/thesis.tex
@@ -55,12 +55,13 @@
     advisor     = {RNDr. Miloš Liška, Ph.D.},
     title       = {Shongo Reservation System Backend REST API},
     TeXtitle    = {Shongo Reservation System Backend REST API},
-    keywords    = {Shongo, REST, API},
-    TeXkeywords = {Shongo, REST, API},
+    keywords    = {reservation system Shongo, REST API, CESNET, Java, Spring, videoconference},
+    TeXkeywords = {reservation system Shongo, REST API, CESNET, Java, Spring, videoconference},
     abstract    = {%
-      The main goal of this bachelor's thesis is to design and implement REST API for the reservation system Shongo developed and operated by the CESNET association. The API will expose the Shongo back-end (Controller module) to higher layers. As a result, a new front-end, which is a goal of another thesis, can communicate with Shongo, thus fully separating the front-end and back-end of the Shongo system.
-      
-      This paper first introduces the Shongo system and discusses the necessary change in its architecture. After the comment about the technologies used, the proposed implementation is presented and the resulting API is described.
+    The main goal of this bachelor thesis is to design and implement REST API for the reservation system Shongo, developed and operated by the CESNET association. The API will expose the Shongo back-end (Controller module) to a new front-end, which is a goal of another thesis.
+    
+    This paper first introduces the Shongo system, describes its current state, and discusses necessary changes in its architecture. After describing the used technologies, the accomplished implementation is presented, and the resulting API is defined.
+    The implemented REST API is ready to expose the Shongo system to the higher layers, especially to the new front-end. The result is a complete separation of the Shongo system's front-end and back-end.
     },
     thanks      = {%
     I would like to thank my advisor RNDr. Miloš Liška, Ph.D, for leadership and valuable comments during the creation of my work.
