--- a/appendices/an-appendix.tex
+++ b/appendices/an-appendix.tex
@@ -2,6 +2,6 @@
 This work consists of the electronic version of the thesis and a zip archive \texttt{shongo.zip}, both publicly accessible in the Information System of Masaryk University\footnote{\url{https://is.muni.cz/th/jhvt4/}}.
 The archive consists of 2 parts:
 \begin{itemize}
-    \item The source code of the Shongo system with implemented REST API is available the in \texttt{shongo} directory.
-    \item Generated OpenAPI specification (see \Cref{sec:openapi}) for implemented REST API is available in the \texttt{openapi.json} file. The specification can be tested in Swagger UI (available at \url{https://editor.swagger.io/} for example).
+    \item The source code of the Shongo system with implemented REST API is available in the \texttt{shongo} directory.
+    \item Generated OpenAPI specification (\Cref{sec:openapi}) for implemented REST API is available in the \texttt{openapi.json} file. The specification can be tested in Swagger UI (available at \url{https://editor.swagger.io/}, for example).
 \end{itemize}
