--- a/thesis.tex
+++ b/thesis.tex
@@ -64,7 +64,7 @@
     The implemented REST API is ready to expose the Shongo system to the higher layers, especially to the new front-end. The result is a complete separation of the Shongo system's front-end and back-end.
     },
     thanks      = {%
-    I would like to thank my advisor RNDr. Miloš Liška, Ph.D, for leadership and valuable comments during the creation of my work.
+    I would like to thank my advisor RNDr. Miloš Liška, Ph.D., for leadership and valuable comments during the creation of my work.
     I would also like to thank my family and friends for their support and the possibility to write this thesis without interruption.
     },
     bib         = bibliography/example.bib,
@@ -148,7 +148,7 @@
 % \printnoidxglossary[title={Abbreviations}, type=\acronymtype]
 % \printnoidxglossary[title={Glossary}]
 
-
+% \lstlistoflistings
 \include{chapters/introduction}
 \include{chapters/shongo}
 \include{chapters/reason}
