--- a/assets/controller.tex
+++ b/assets/controller.tex
@@ -14,7 +14,7 @@ public class ReservationRequestController
         this.reservationService = reservationService;
     }
     
-    // Binds this method to the HTTP GET request with path defined in @RequestMapping
+    // Binds this method to the HTTP GET request with the path defined in @RequestMapping
     @GetMapping
     // Method returns ListResponse<ReservationRequestModel> in response body thanks to @RestController annotation
     ListResponse<ReservationRequestModel> listRequests(
@@ -34,9 +34,9 @@ public class ReservationRequestController
         return response;
     }
     
-    // Sets the response status for successful execution of method
+    // Sets the response status for successful execution of the method
     @ResponseStatus(HttpStatus.CREATED)
-    // Binds this method to the HTTP POST request with path defined in @RequestMapping
+    // Binds this method to the HTTP POST request with the path defined in @RequestMapping
     @PostMapping
     void createRequest(
         @RequestAttribute(TOKEN) SecurityToken securityToken,
@@ -53,7 +53,7 @@ public class ReservationRequestController
     @ApiResponses(value = {
         @ApiResponse(responseCode = "200"), @ApiResponse(responseCode = "404", description = "Reservation request not found.", content = @Content),
     })
-    // Binds this method to the HTTP DELETE request with path defined in @RequestMapping concatenated with "/{id:.+}". The ':' marks the start of a regex to be used for the id variable (useful to accept only numbers for example). The regex ".+" is used because shongo-id can include URL key characters like ':' or '-'.
+    // Binds this method to the HTTP DELETE request with the path defined in @RequestMapping concatenated with "/{id:.+}". The ':' marks the start of a regex used for the id variable (useful to accept only numbers, for example). The regex ".+" is used because shongo-id can include URL key characters like ':' or '-'.
     @DeleteMapping("/{id:.+}")
     void deleteRequest(
         @RequestAttribute(TOKEN) SecurityToken securityToken,
